--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
 						<div class="elementor-element elementor-element-74d07b7 elementor-widget elementor-widget-text-editor"
 							data-id="74d07b7" data-element_type="widget" data-widget_type="text-editor.default">
 							<div class="elementor-widget-container">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis faucibus
+								<p>hello dkhfiefkfaslfdkl, consectetur adipiscing elit. Maecenas quis faucibus
 									ligula. Maecenas a purus massa. Ut elementum sem mauris, ut venenatis tortor congue
 									et. Ut et dolor massa.</p>
 							</div>
@@ -709,7 +709,7 @@
 								<div class="ekit-wid-con">
 									<div
 										class="ekit-heading elementskit-section-title-wraper text_left   ekit_heading_tablet-   ekit_heading_mobile-">
-										<h2 class="ekit-heading--title elementskit-section-title ">Let Us Be Your
+										<h2 class="ekit-heading--title elementskit-section-title ">Hame nhi banna
 											<span><span>IT Partner</span></span>
 										</h2>
 									</div>
@@ -719,7 +719,7 @@
 						<div class="elementor-element elementor-element-09adffa elementor-widget elementor-widget-text-editor"
 							data-id="09adffa" data-element_type="widget" data-widget_type="text-editor.default">
 							<div class="elementor-widget-container">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis faucibus
+								<p>hello dkhfiefkfaslfdkl, consectetur adipiscing elit. Maecenas quis faucibus
 									ligula. Maecenas a purus massa. Ut elementum sem.</p>
 							</div>
 						</div>
@@ -2397,7 +2397,7 @@
 											Digital Conference Of IT Tech Events&hellip; </a>
 									</h2>
 									<p>Digital Conference Of IT Tech Events in 2020 Home &#8211; Single Post Deka August
-										20, 2022 0 Comment Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+										20, 2022 0 Comment hello dkhfiefkfaslfdkl, consectetur adipiscing elit.
 										Morbi elit arcu, posuere&hellip;</p>
 									<div class="btn-wraper">
 
@@ -2432,7 +2432,7 @@
 											Data Security With Multiple Business Values. </a>
 									</h2>
 									<p>Data Security With Multiple Business Values. Home &#8211; Single Post Deka August
-										20, 2022 0 Comment Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+										20, 2022 0 Comment hello dkhfiefkfaslfdkl, consectetur adipiscing elit.
 										Morbi elit arcu, posuere eu ipsum&hellip;</p>
 									<div class="btn-wraper">
 
@@ -2468,7 +2468,7 @@
 											Providing Top Quality Cleaning &#038; Related&hellip; </a>
 									</h2>
 									<p>Providing Top Quality Cleaning &#038; Related Services Charms. Home &#8211;
-										Single Post Deka August 20, 2022 0 Comment Lorem ipsum dolor sit amet,
+										Single Post Deka August 20, 2022 0 Comment hello dkhfiefkfaslfdkl,
 										consectetur adipiscing elit. Morbi elit arcu, posuere&hellip;</p>
 									<div class="btn-wraper">
 
